Rework, need to fix UI and Server communication

--- a/TelestrationsServer/TelestrationsServer.csproj
+++ b/TelestrationsServer/TelestrationsServer.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
+    <ProjectReference Include="..\TelestrationsLibrary\TelestrationsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
