Bucket Fill almost done

--- a/TelestrationsUI/TelestrationsUI.csproj
+++ b/TelestrationsUI/TelestrationsUI.csproj
@@ -6,7 +6,16 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\bucket.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Bucket.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TelestrationsLibrary\TelestrationsLibrary.csproj" />
