--- a/TelestrationsServer/TelestrationsServer.csproj
+++ b/TelestrationsServer/TelestrationsServer.csproj
@@ -7,12 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="resources\example-image.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TelestrationsLibrary\TelestrationsLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="resources\example-image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
